update docker compose
rapair server side transport issue

try to repair the issue of remote media disappeared

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3016:3016/tcp"
-      - "10000:10100/tcp"
-      - "10000:10100/udp"
+      - "10000-10100:10000-10100/tcp"
+      - "10000-10100:10000-10100/udp"
