update docker-compose with `env_file` parameter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       - "3016:3016/tcp"
       - "10000-10100:10000-10100/tcp"
       - "10000-10100:10000-10100/udp"
+    env_file:
+      - .env
